versioned_docs/version-1.34/reference/feature-flags.mdx
---
title: Feature Flags
description: Okteto's feature flags on the CLI
sidebar_label: Feature Flags
id: feature-flags
---

Setting any feature flag variable as an [Admin Variable](admin/dashboard.mdx#admin-variables) will enable that feature flag for all operations within the cluster.
Admin variables are equivalent to defining that variable on every developer's machine.


Below is a list of those variables that you can use to leverage these newer and experimental features:

| Environment Variable                             | Description                                                                                                                                                                                                                     | Default Value          |
|--------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------|
| OKTETO_AUTOGENERATE_STIGNORE                     | If true, generates the `.stignore` file when running `okteto up`                                                                                                                                                                | `false`                |
| OKTETO_AUTODEPLOY                                | If set, forces the deployment of the development environment on `okteto up`                                                                                                                                                     | `false`                |
| OKTETO_AUTO_DOWN_ENABLED                         | If set, `okteto up` will run `okteto down` on exit if all the commands are succesful                                                                                                                                            | `false`                |
| OKTETO_BUILDKIT_FRONTEND_IMAGE                   | Specifies the default docker image to use for the [BuildKit frontend](https://docs.docker.com/build/buildkit/frontend/)                                                                                                         | Built-in Dockerfile frontend                    |
| OKTETO_BUILDKIT_MAX_RETRIES_FOR_TRANSIENT_ERRORS | Specifies the maximum number of retry attempts for build processes that fail due to transient (temporary) BuildKit errors                                                                                                       | `3`                    |
| OKTETO_BUILDKIT_WAIT_TIMEOUT                     | Specifies the maximum duration to wait for BuildKit to become available                                                                                                                                                         | `10m`                  |
| OKTETO_BUILDKIT_RETRY_INTERVAL                   | Specifies the interval between successive checks of BuildKit's availability status                                                                                                                                              | `5s`                   |
| OKTETO_COMPOSE_UPDATE_STRATEGY                   | Defines the update strategy that the compose must translate (it can be one of: `rolling`/`recreate`/`on-delete`)                                                                                                                | N/A                    |
| OKTETO_COMPOSE_VOLUME_AFFINITY_ENABLED           | Compose services mounting the same volume will be placed on the same node using Kubernetes's pod affinity                                                                                                                       | `true`                 |
| OKTETO_COMPOSE_WAIT_FOR_DEPENDENCIES             | Determines whether the wake job should honor the `depends_on` order defined in Docker Compose files.                                                                                                                                                  | `false`                |                                   
| OKTETO_DEV_PERSISTENT_VOLUME_SIZE                | Override the default [persistent volume](reference/okteto-manifest.mdx#persistentvolume-object-optional) size for Development Containers. Set in [binary SI units](https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/) (e.g. 2Gi)                                                                                                | N/A                    |
| OKTETO_DISABLE_SPINNER                           | If set, disables the spinner rotation                                                                                                                                                                                           | `false`                |
| OKTETO_FOLDER                                    | Defines the path where the Okteto folder is located                                                                                                                                                                             | `$OKTETO_HOME/.okteto` |
| OKTETO_KUBERNETES_TIMEOUT                        | Specifies the timeout while deploying                                                                                                                                                                                           | `0`                    |
| OKTETO_LOCAL_REGISTRY_STORE_PRIORITY_ENABLED     | Gives more priority to the local registry credentials than the Okteto Registry Credentials                                                                                                                                      | `false`                |
| OKTETO_PARALLEL_WAKE_UPS_FOR_DEVENVS             | Specifies if the dev environments within a namespace should wake up in parallel or not                                                                                                                                          | `false`                  |  
| OKTETO_SERVICES_UP_WAIT                          | If set, waits for file synchronization to complete before starting the services defined in the [`services` section](reference/okteto-manifest.mdx#services-object-optional)                                                                                                                                                   | `false`                  |  
| OKTETO_SMART_BUILDS_ENABLED                      | Enables the [Smart Builds feature](core/build-service.mdx#smart-builds) that uses a hash of the build context to determine if an image needs to be rebuilt or can be pulled from the registry. This can accelerate build times  | `true`                 |
| OKTETO_SMART_BUILDS_IGNORE_FILES_ENABLED         | When enabled, files listed in `.dockerignore` will be excluded from the smart build context calculation                                                                                                                         | `false`                |
| OKTETO_SUPPORT_STACKS_ENABLED                    | Support Okteto Stacks syntax                                                                                                                                                                                                    | `false`                |
| OKTETO_SYNCTHING_VERSION                         | Specifies the Syncthing version the CLI must use                                                                                                                                                                                | N/A                    |
| OKTETO_USE_STATIC_KUBETOKEN                      | Use a fixed token rather than a dynamic token for interactions with the Kubernetes API                                                                                                                                          | `false`                |
